FINALLY FIXED EVERYTHING AAAAAAAAA

--- a/content/blog/beautify_this/index.mdx
+++ b/content/blog/beautify_this/index.mdx
@@ -4,5 +4,5 @@ description: The poet this twitter bot i had earlier, had several issues, like b
 date: 2022-05-06
 categories: ['twitter', 'bot']
 ogImage: ./og-image.webp
-external : 'https://dev.to/dhravya/this-website-doesnt-have-an-api-so-i-made-my-own-with-extra-features-3fd6'
+external : https://dev.to/dhravya/this-website-doesnt-have-an-api-so-i-made-my-own-with-extra-features-3fd6
 ---
