changed some images

--- a/content/blog/beautify_this/index.mdx
+++ b/content/blog/beautify_this/index.mdx
@@ -3,6 +3,6 @@ title: This website doesn't have an API, so I remade the entire website, and mad
 description: The poet this twitter bot i had earlier, had several issues, like being too expensive to host, and not being able to use reliably. It was time to change this.
 date: 2022-05-06
 categories: ['twitter', 'bot']
-ogImage: ./og-image.webp
+ogImage: ./og-image.png
 external : https://dev.to/dhravya/this-website-doesnt-have-an-api-so-i-made-my-own-with-extra-features-3fd6
 ---
